--- a/index.html
+++ b/index.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Golang on iPad with Codespaces</title>
+    <style>
+        /* Add some styling to make the page look similar to GitHub.com */
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #24292e;
+            color: #ffffff;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 16px;
+        }
+
+        header a {
+            color: #ffffff;
+            text-decoration: none;
+        }
+
+        header a.logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        header nav {
+            display: flex;
+            align-items: center;
+        }
+
+        header nav a {
+            margin-left: 16px;
+        }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+
+        main h1 {
+            font-size: 48px;
+            margin-bottom: 16px;
+        }
+
+        main p {
+            font-size: 18px;
+            line-height: 24px;
+            max-width: 600px;
+        }
+    </style>
 </head>
 
 <body>
-    <title>Welcome</title>
-    <h1>Welcome to Golang on iPad</h1>
+    <header>
+        <a class="logo" href="/">GitHub</a>
+        <nav>
+            <a href="/features">Features</a>
+            <a href="/business">Business</a>
+            <a href="/explore">Explore</a>
+            <a href="/marketplace">Marketplace</a>
+            <a href="/pricing">Pricing</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to Codespaces from iPad</h1>
+        <p>Lets figure out how we can make stuff here. </p>
+    </main>
 </body>
 
 </html>
