title and logo update

--- a/index.html
+++ b/index.html
@@ -62,14 +62,10 @@
 
 <body>
     <header>
-        <a class="logo" href="/">GitHub</a>
-        <nav>
-            <a href="/pricing">Pricing</a>
-        </nav>
+        <a class="logo" href="/">BALD.ai</a>
     </header>
     <main>
-        <h1>Welcome to Codespaces from iPad</h1>
-        <p>Lets figure out how we can make stuff here. </p>
+        <h1>Velkommen.</h1>
     </main>
 </body>
 
