--- a/index.html
+++ b/index.html
@@ -68,17 +68,21 @@
         <h1>0.0.1</h1>
     </main>
 </body>
-<!-- query the cities endpoint in the main.go file then output it on the page if error report the error on the screen-->
+<!-- when the page loads, query the /cities endpoint in the main.go file then output it on the page if error report the error on the screen -->
 <script>
-    fetch('/cities').then(function (response) {
-        return response.json();
-    }).then(function (data) {
-        var cities = document.getElementById('cities');
-        cities.innerHTML = data.join(', ');
-    }).catch(function (error) {
-        var cities = document.getElementById('cities');
-        cities.innerHTML = error;
-    });
+    fetch('/cities')
+        .then(response => response.json())
+        .then(data => {
+            document.querySelector('main').innerHTML = `
+                <h1>${data}</h1>
+            `;
+        })
+        .catch(error => {
+            document.querySelector('main').innerHTML = `
+                <h1>Error</h1>
+                <p>${error}</p>
+            `;
+        });
 </script>
 
 </html>
