--- a/index.html
+++ b/index.html
@@ -67,13 +67,26 @@
     <main>
         <h1>0.0.1</h1>
         <style>
-            /* Add some styling to make the list look nice */
+            @media (max-width: 600px) {
+                li {
+                    flex: 0 0 100%;
+                    max-width: 100%;
+                }
+            }
+
             ul {
+                display: flex;
+                flex-wrap: wrap;
+                width: 100%;
+
                 list-style: none;
                 padding: 0;
                 margin: 0;
             }
+
             li {
+                flex: 0 0 50%;
+                max-width: 50%;
                 display: flex;
                 align-items: center;
                 padding: 16px;
@@ -81,23 +94,26 @@
                 background-color: #f5f5f5;
                 border-radius: 4px;
             }
+
             li img {
                 height: 48px;
                 width: 48px;
                 border-radius: 50%;
                 margin-right: 16px;
             }
+
             li h2 {
                 font-size: 18px;
                 margin: 0;
             }
+
             li p {
                 font-size: 14px;
                 color: #999;
                 margin: 0;
             }
         </style>
-        
+
         <ul>
             <li>
                 <img src="/images/flags/france.png" alt="Flag of France">
@@ -135,7 +151,7 @@
                 </div>
             </li>
         </ul>
-        
+
     </main>
 </body>
 <!-- when the page loads, query the /cities endpoint in the main.go file. 
